# polymarket-ai-trading-bot

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yml  example_output.json  pyproject.toml  start.sh
.github/workflows/: ci.yml
scripts/: seed_demo_data.py  wipe_db.py
src/: __init__.py  cli.py  config.py
src/analytics/: adaptive_weights.py  calibration_feedback.py  performance_tracker.py  regime_detector.py  smart_entry.py  wallet_scanner.py
src/connectors/: __init__.py  api_pool.py  microstructure.py  polymarket_clob.py  polymarket_data.py  polymarket_gamma.py  rate_limiter.py  web_search.py  ws_feed.py
src/dashboard/: app.py
src/dashboard/static/: dashboard.js  style.css
src/dashboard/templates/: index.html
src/engine/: event_monitor.py  loop.py  market_classifier.py  market_filter.py  position_manager.py
src/execution/: __init__.py  cancels.py  fill_tracker.py  order_builder.py  order_router.py
src/forecast/: __init__.py  calibrator.py  ensemble.py  feature_builder.py  llm_forecaster.py
src/observability/: __init__.py  alerts.py  logger.py  metrics.py  reports.py  sentry_integration.py
src/policy/: __init__.py  arbitrage.py  drawdown.py  edge_calc.py  portfolio_risk.py  position_sizer.py  risk_limits.py  timeline.py
src/research/: __init__.py  evidence_extractor.py  query_builder.py  source_fetcher.py
src/storage/: __init__.py  audit.py  backup.py  cache.py  database.py  migrations.py  models.py
tests/: __init__.py  conftest.py  test_analytics.py  test_decision_log.py  test_evidence_extraction.py  test_improvements.py  test_live_pnl.py  test_market_classifier.py  test_market_filter.py  test_market_parsing.py  test_new_modules.py  test_orderbook.py  test_paper_trading.py  test_policy.py  test_wallet_scanner.py
